--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KK_darbas_2"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Lankytinos_vietos"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
